# foundations_robot_kinematics

./: CMakeLists.txt  README.md  package.xml
include/: 3r_planar.h  common_operations.h
src/: 3r_planar_forward.cpp  3r_planar_inverse.cpp  3r_planar_jacobian.cpp  common_operations.cpp
