<?xml version="1.0"?>
<package format="2">
  <name>foundations_robot_kinematics</name>
  <version>1.0.0</version>
  <description>The foundations_robot_kinematics package</description>

  <maintainer email="tuialexandre@gmail.com">tuialexandre</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
